# nodejs_bazel_mre

./: BUILD.bazel  MODULE.bazel  repository.bzl
.devcontainer/: devcontainer.json
