bazel_dep(name = "rules_nodejs", version = "6.3.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.14.0")
use_repo(node, "nodejs", "nodejs_toolchains")

test_repository = use_repo_rule("//:repository.bzl", "test_repository")
test_repository(name = "repository_nodejs")
